--- a/css/base.css
+++ b/css/base.css
@@ -10,6 +10,11 @@
     box-sizing: border-box;
 }
 
+html {
+    overflow-x: hidden;
+    width: 100%;
+}
+
 /* =========================
    CSS VARIABLES
    ========================= */
@@ -57,6 +62,7 @@ body {
     -webkit-font-smoothing: antialiased;
     position: relative;
     overflow-x: hidden;
+    width: 100%;
 }
 
 h1,
